--- a/example.html
+++ b/example.html
@@ -1,9 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title></title>
-</head>
-<body>
-
-</body>
+	<head>
+		<title>The Title</title>
+	</head>
+	<body>
+		<h1>For Immediate Release</h1>
+		<p1>Genereal Assembly, which started in New York as a startup incubator, now offers classes and workshops in technology, design, and entrepreneurshop, with campuses around the world in:
+		</p1>
+		<ul>
+		  <li>Berlin</li>
+		  <li>Boston</li>
+		  <li>Hong Kong</li>
+		  <li>London</li>
+		  <li>Los Angelas</li>
+		  <li>New York City</li>
+		  <li>San Francisco</li>
+		  <li>Sydney</li>
+		  <li>Washington D.C</li>
+		</ul>
+		<p>For more information, visit General Assebbly's <a href="www.generalassembly">website</a>.</p>
+	</body>
 </html>
